<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="eyoj_video_course">Eyoj Video \n Course</string>
    <string name="label_login">Logın</string>
    <string name="label_create_account">Create Account</string>
    <string name="label_sign_up">Sign Up</string>
    <string name="label_email">E-mail</string>
    <string name="label_password">Password</string>
    <string name="label_confirm_password">Confirm Password</string>
    <string name="label_sign_in">Sign in</string>
    <string name="error_firebase">Error: %s</string>
</resources>