<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/eyoj_gray_100"
    tools:context=".ui.view.CourseAuthFragment">

    <TextView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eyoj_video_course"
        android:textColor="@color/eyoj_gray_600"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_marginHorizontal="16dp"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:backgroundTint="@color/eyoj_green"
            android:text="@string/label_login"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="22sp"
            android:textColor="@color/eyoj_gray_100"
            app:cornerRadius="6dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_register"
            style="@style/OutlinedButton.EyojStyle"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:textSize="22sp"
            android:backgroundTint="@null"
            android:textColor="@color/eyoj_green"
            android:text="@string/label_create_account"
            app:cornerRadius="6dp"
            app:strokeColor="@color/eyoj_gray_600"
            app:strokeWidth="3dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>