<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context=".ui.view.SignInFragment">

    <TextView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="128dp"
        android:text="@string/eyoj_video_course"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="44sp"/>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="@color/eyoj_gray_100"
        android:backgroundTint="@null"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CardView.TopCorners">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="24dp">

            <TextView
                android:id="@+id/txt_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/label_sign_in"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_field_email"
                style="@style/Widget.App.TextInputLayout.Filled.White"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                app:endIconMode="clear_text"
                app:endIconTint="@android:color/darker_gray"
                app:errorIconDrawable="@null"
                android:hint="@string/label_email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_header">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signInEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_field_password"
                style="@style/Widget.App.TextInputLayout.Filled.White"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:hint="@string/label_password"
                app:endIconMode="password_toggle"
                app:endIconTint="@android:color/darker_gray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_field_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signInPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_action"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="24dp"
                android:text="@string/label_login"
                app:cornerRadius="6dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_field_password"/>

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/progress_indicator"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:indeterminate="true"
                android:visibility="gone"
                app:indicatorColor="@color/eyoj_green"
                tools:visibility="visible"
                app:layout_constraintStart_toStartOf="@+id/btn_action"
                app:layout_constraintTop_toBottomOf="@+id/btn_action"/>

            <TextView
                android:id="@+id/progress_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:gravity="center"
                android:textStyle="bold"
                android:visibility="gone"
                tools:text="Logging you in..."
                tools:visibility="visible"
                app:layout_constraintTop_toTopOf="@+id/progress_indicator"
                app:layout_constraintBottom_toBottomOf="@id/progress_indicator"
                app:layout_constraintTop_toBottomOf="@+id/btn_action"
                app:layout_constraintStart_toEndOf="@+id/progress_indicator"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>